@@ -1,3 +1,8 @@
+2006-04-06  Adam Jackson  <ajax@freedesktop.org>
+
+	* hw/dmx/dmxextension.c:
+	Coverity #1037: Sanity check idx before use.
+
 2006-04-05  Fredrik Höglund  <fredrik@kde.org>
 
 	* Xext/Makefile.am:
